# claude-pulse

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: hooks.rs  lib.rs  server.rs  state.rs
src/renderers/: factory.ts  types.ts
src/renderers/orb/: OrbRenderer.ts
src/renderers/pixel-character/: PixelCharacterRenderer.ts
swiftbar/: claude-pulse.1s.sh  pulse-hook.sh  pulse-renderer.sh  pulse-start.sh  pulse-stop.sh  pulse-toggle.sh
