[package]
name = "claude-pulse"
version = "0.1.0"
description = "Ambient desktop presence widget for Claude Code"
authors = ["James"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["macos-private-api"] }
tauri-plugin-log = "2"
axum = "0.8"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
window-vibrancy = "0.6"
